[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/MainMenu/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://UI/MainMenu/Smoke.png" type="Texture" id=2]
[ext_resource path="res://UI/MainMenu/Logo.png" type="Texture" id=3]
[ext_resource path="res://Logic/DialogBox/fonts/Cave-Story.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/MainMenu/MainMenu.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "SmokeMove"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuTextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoTextureRect" type="TextureRect" parent="."]
margin_left = 4.7882
margin_top = 5.1204
margin_right = 168.0
margin_bottom = 168.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmokeSprite" type="Sprite" parent="LogoTextureRect"]
position = Vector2( 100.847, 24.0039 )
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="LogoTextureRect/SmokeSprite"]
anims/SmokeMove = SubResource( 1 )

[node name="LoadButton" type="Button" parent="."]
margin_left = 190.0
margin_top = 76.753
margin_right = 290.0
margin_bottom = 96.753
custom_fonts/font = SubResource( 2 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="."]
margin_left = 190.0
margin_top = 50.056
margin_right = 290.0
margin_bottom = 70.056
custom_fonts/font = SubResource( 3 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteSavePopupMenu" type="Popup" parent="."]
margin_left = 180.75
margin_top = 40.25
margin_right = 305.75
margin_bottom = 150.25

[node name="TextureRect" type="TextureRect" parent="DeleteSavePopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="DeleteSavePopupMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.726
margin_top = -48.845
margin_right = 56.274
margin_bottom = 13.155
custom_fonts/font = SubResource( 4 )
text = "Creating a new game will erase all previous data. Are you sure you want to?"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="DeleteSavePopupMenu"]
margin_left = 20.0
margin_top = 75.0
margin_right = 54.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 5 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="DeleteSavePopupMenu"]
margin_left = 71.0
margin_top = 75.0
margin_right = 105.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 6 )
text = "No"

[node name="NoSaveGamePopup" type="Popup" parent="."]
margin_left = 180.75
margin_top = 40.25
margin_right = 305.75
margin_bottom = 150.25

[node name="TextureRect" type="TextureRect" parent="NoSaveGamePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="NoSaveGamePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.726
margin_top = -48.845
margin_right = 56.274
margin_bottom = 13.155
custom_fonts/font = SubResource( 4 )
text = "There is no save data. Please start a new game."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="Button" parent="NoSaveGamePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -30.0
margin_right = 15.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 7 )
text = "Ok"
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="DeleteSavePopupMenu/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="DeleteSavePopupMenu/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="NoSaveGamePopup/OkButton" to="." method="_on_OkButton_pressed"]
